--- a/language-translation/dlnd_language_translation.ipynb
+++ b/language-translation/dlnd_language_translation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,9 +40,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Stats\n",
+      "Roughly the number of unique words: 227\n",
+      "Number of sentences: 137861\n",
+      "Average number of words in a sentence: 13.225277634719028\n",
+      "\n",
+      "English sentences 0 to 10:\n",
+      "new jersey is sometimes quiet during autumn , and it is snowy in april .\n",
+      "the united states is usually chilly during july , and it is usually freezing in november .\n",
+      "california is usually quiet during march , and it is usually hot in june .\n",
+      "the united states is sometimes mild during june , and it is cold in september .\n",
+      "your least liked fruit is the grape , but my least liked is the apple .\n",
+      "his favorite fruit is the orange , but my favorite is the grape .\n",
+      "paris is relaxing during december , but it is usually chilly in july .\n",
+      "new jersey is busy during spring , and it is never hot in march .\n",
+      "our least liked fruit is the lemon , but my least liked is the grape .\n",
+      "the united states is sometimes busy during january , and it is sometimes warm in november .\n",
+      "\n",
+      "French sentences 0 to 10:\n",
+      "new jersey est parfois calme pendant l' automne , et il est neigeux en avril .\n",
+      "les états-unis est généralement froid en juillet , et il gèle habituellement en novembre .\n",
+      "california est généralement calme en mars , et il est généralement chaud en juin .\n",
+      "les états-unis est parfois légère en juin , et il fait froid en septembre .\n",
+      "votre moins aimé fruit est le raisin , mais mon moins aimé est la pomme .\n",
+      "son fruit préféré est l'orange , mais mon préféré est le raisin .\n",
+      "paris est relaxant en décembre , mais il est généralement froid en juillet .\n",
+      "new jersey est occupé au printemps , et il est jamais chaude en mars .\n",
+      "notre fruit est moins aimé le citron , mais mon moins aimé est le raisin .\n",
+      "les états-unis est parfois occupé en janvier , et il est parfois chaud en novembre .\n"
+     ]
+    }
+   ],
    "source": [
     "view_sentence_range = (0, 10)\n",
     "\n",
@@ -84,9 +119,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def get_id_text(input, vocab_to_int):\n",
+    "    return [[vocab_to_int[word] for word in sentence.split()] for sentence in input]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def text_to_ids(source_text, target_text, source_vocab_to_int, target_vocab_to_int):\n",
     "    \"\"\"\n",
@@ -97,9 +150,13 @@
     "    :param target_vocab_to_int: Dictionary to go from the target words to an id\n",
     "    :return: A tuple of lists (source_id_text, target_id_text)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
+    "    source_sentences = [sentence for sentence in source_text.split('\\n')]\n",
+    "    target_sentences = [sentence + ' <EOS>' for sentence in target_text.split('\\n')]\n",
     "    \n",
-    "    return None, None\n",
+    "    source_id_text = get_id_text(source_sentences, source_vocab_to_int)\n",
+    "    target_id_text = get_id_text(target_sentences, target_vocab_to_int)\n",
+    "    \n",
+    "    return source_id_text, target_id_text\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -117,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,9 +281,12 @@
     "    :return: Tuple (input, targets, learning rate, keep probability, target sequence length,\n",
     "    max target sequence length, source sequence length)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None, None, None, None, None, None\n",
-    "\n",
+    "    inputs = tf.placeholder(tf.int32, (None, None), name='input')\n",
+    "    targets = tf.placeholder(tf.int32, (None, None), name='targets')\n",
+    "    learning_rate = tf.placeholder(tf.float32, name='learning_rate')\n",
+    "    keep_probability = tf.placeholder(tf.float32, name='keep_prob')\n",
+    "    \n",
+    "    return inputs, targets, learning_rate, keep_probability\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -256,8 +316,9 @@
     "    :param batch_size: Batch Size\n",
     "    :return: Preprocessed target data\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    go = target_vocab_to_int['<GO>']\n",
+    "    ending = tf.strided_slice(target_data, [0, 0], [batch_size, -1], [1, 1])\n",
+    "    return tf.concat([tf.fill([batch_size, 1], go), ending], 1)\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -301,8 +362,12 @@
     "    :param encoding_embedding_size: embedding size of source data\n",
     "    :return: tuple (RNN output, RNN state)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    lstm = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
+    "    dropout = tf.contrib.rnn.DropoutWrapper(lstm, keep_prob)\n",
+    "    cell = tf.contrib.rnn.MultiRNNCell([lstm] * num_layers)\n",
+    "    _, rnn_state = tf.nn.dynamic_rnn(cell, rnn_inputs, dtype=tf.float32)\n",
+    "    \n",
+    "    return rnn_state\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -342,8 +407,16 @@
     "    :param keep_prob: Dropout keep probability\n",
     "    :return: BasicDecoderOutput containing training logits and sample_id\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    dec_fn_train = tf.contrib.seq2seq.simple_decoder_fn_train(encoder_state)\n",
+    "    output_logits, _, _ = tf.contrib.seq2seq.dynamic_rnn_decoder(\n",
+    "        dec_cell,\n",
+    "        dec_fn_train,\n",
+    "        dec_embed_input,\n",
+    "        sequence_length,\n",
+    "        scope=decoding_scope\n",
+    "    )\n",
+    "    train_logits = output_fn(output_logits)\n",
+    "    return train_logits\n",
     "\n",
     "\n",
     "\n",
@@ -390,8 +463,18 @@
     "    :param keep_prob: Dropout keep probability\n",
     "    :return: BasicDecoderOutput containing inference logits and sample_id\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    infer_decoder_fn = tf.contrib.seq2seq.simple_decoder_fn_inference(\n",
+    "        output_fn,\n",
+    "        encoder_state,\n",
+    "        dec_embeddings,\n",
+    "        start_of_sequence_id,\n",
+    "        end_of_sequence_id,\n",
+    "        maximum_length,\n",
+    "        vocab_size)\n",
+    "    \n",
+    "    infer_logits, _, _ = tf.contrib.seq2seq.dynamic_rnn_decoder(dec_cell, decoder_fn=infer_decoder_fn, scope=decoding_scope)\n",
+    "    \n",
+    "    return infer_logits\n",
     "\n",
     "\n",
     "\n",
@@ -443,8 +526,19 @@
     "    :param decoding_embedding_size: Decoding embedding size\n",
     "    :return: Tuple of (Training BasicDecoderOutput, Inference BasicDecoderOutput)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    with tf.variable_scope('decoding') as decoding_scope:\n",
+    "        dec_cell = tf.contrib.rnn.MultiRNNCell([tf.contrib.rnn.BasicLSTMCell(rnn_size)] * num_layers)\n",
+    "        dec_cell = tf.contrib.rnn.DropoutWrapper(dec_cell, input_keep_prob=keep_prob, output_keep_prob=keep_prob)\n",
+    "        output_fn = lambda x: tf.contrib.layers.fully_connected(x, vocab_size, None, scope=decoding_scope)\n",
+    "        \n",
+    "    with tf.variable_scope('decoding') as decoding_scope:\n",
+    "        train_logits = decoding_layer_train(encoder_state, dec_cell, dec_embed_input, sequence_length, decoding_scope, output_fn, keep_prob)\n",
+    "\n",
+    "    with tf.variable_scope('decoding', reuse=True) as decoding_scope:\n",
+    "        infer_logits = decoding_layer_infer(encoder_state, dec_cell, dec_embeddings, target_vocab_to_int['<GO>'], target_vocab_to_int['<EOS>'], sequence_length - 1, vocab_size, decoding_scope, output_fn, keep_prob)\n",
+    "        \n",
+    "    \n",
+    "    return train_logits, infer_logits\n",
     "\n",
     "\n",
     "\n",
@@ -495,8 +589,27 @@
     "    :param target_vocab_to_int: Dictionary to go from the target words to an id\n",
     "    :return: Tuple of (Training BasicDecoderOutput, Inference BasicDecoderOutput)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    enc_inputs = tf.contrib.layers.embed_sequence(input_data, source_vocab_size, enc_embedding_size)\n",
+    "    enc_state = encoding_layer(enc_inputs, rnn_size, num_layers, keep_prob)\n",
+    "    \n",
+    "    dec_inputs = process_decoding_input(target_data, target_vocab_to_int, batch_size)\n",
+    "    dec_embeddings = tf.Variable(tf.truncated_normal([target_vocab_size, dec_embedding_size], stddev=0.01))\n",
+    "    dec_embed_inputs = tf.nn.embedding_lookup(dec_embeddings, dec_inputs)\n",
+    "    \n",
+    "    train_logits, infer_logits = decoding_layer(\n",
+    "        dec_embed_inputs,\n",
+    "        dec_embeddings,\n",
+    "        enc_state,\n",
+    "        target_vocab_size,\n",
+    "        sequence_length,\n",
+    "        rnn_size,\n",
+    "        num_layers,\n",
+    "        target_vocab_to_int,\n",
+    "        keep_prob\n",
+    "    )\n",
+    "    \n",
+    "    \n",
+    "    return train_logits, infer_logits\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -527,27 +640,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "epochs = None\n",
+    "epochs = 7\n",
     "# Batch Size\n",
-    "batch_size = None\n",
+    "batch_size = 256\n",
     "# RNN Size\n",
-    "rnn_size = None\n",
+    "rnn_size = 512\n",
     "# Number of Layers\n",
-    "num_layers = None\n",
+    "num_layers = 2\n",
     "# Embedding Size\n",
-    "encoding_embedding_size = None\n",
-    "decoding_embedding_size = None\n",
+    "encoding_embedding_size = 10\n",
+    "decoding_embedding_size = 10\n",
     "# Learning Rate\n",
-    "learning_rate = None\n",
+    "learning_rate = 0.001\n",
     "# Dropout Keep Probability\n",
-    "keep_probability = None\n",
-    "display_step = None"
+    "keep_probability = 0.7\n",
+    "display_step = 256"
    ]
   },
   {
@@ -625,9 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -920,7 +1029,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
