--- a/face_generation/dlnd_face_generation.ipynb
+++ b/face_generation/dlnd_face_generation.ipynb
@@ -276,9 +276,33 @@
     "    :return: Tuple of (tensor output of the discriminator, tensor logits of the discriminator)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    tf.variable_scope()\n",
-    "    \n",
-    "    return output, logits\n",
+    "     with tf.variable_scope('discriminator', reuse=reuse):\n",
+    "        # Layer 1 in: 28x28x(1|3)\n",
+    "        layer_1 = tf.layers.conv2d(images, 32, 5, 2, padding='same', kernel_initializer=tf.random_normal_initializer(stddev=stddev))\n",
+    "        layer_1 = tf.maximum(alpha * layer_1, layer_1)\n",
+    "        # Layer 1 out: 14x14x32\n",
+    "        \n",
+    "        # Layer 2: 14x14x32\n",
+    "        layer_2 = tf.layers.conv2d(layer_1, 64, 5, 2, padding='same', kernel_initializer=tf.random_normal_initializer(stddev=stddev))\n",
+    "        layer_2 = tf.layers.batch_normalization(layer_2, training=True)\n",
+    "        layer_2 = tf.maximum(alpha * layer_2, layer_2)\n",
+    "        # Layer 2 out: 7x7x64\n",
+    "        \n",
+    "        layer_3 = tf.layers.conv2d(layer_2, 128, 5, 2, padding='same',  kernel_initializer=tf.random_normal_initializer(stddev=stddev))\n",
+    "        layer_3 = tf.layers.batch_normalization(layer_3, training=True)\n",
+    "        layer_3 = tf.maximum(alpha * layer_3, layer_3)\n",
+    "        # Layer 3 out: 4x4x128\n",
+    "        \n",
+    "        layer_4 = tf.layers.conv2d(layer_3, 256, 5, 2, padding='same', kernel_initializer=tf.random_normal_initializer(stddev=stddev))\n",
+    "        layer_4 = tf.layers.batch_normalization(layer_4, training=True)\n",
+    "        layer_4 = tf.maximum(alpha * layer_4, layer_4)\n",
+    "        # Layer 4 out: 2x2x256\n",
+    "        \n",
+    "        flattened = tf.reshape(layer_4, (-1, 2*2*256))\n",
+    "        logits = tf.layers.dense(flattened, 1, kernel_initializer=tf.random_normal_initializer(stddev=stddev))\n",
+    "        output = tf.sigmoid(logits)\n",
+    "        \n",
+    "        return output, logits\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -311,9 +335,33 @@
     "    :param is_train: Boolean if generator is being used for training\n",
     "    :return: The tensor output of the generator\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    \n",
-    "    return None\n",
+    "    with tf.variable_scope('generator', reuse=not is_train):\n",
+    "        # Layer 1 in: 7x7x256\n",
+    "        layer_1 = tf.layers.dense(z, 4 * 4 * 512)\n",
+    "        layer_1 = tf.reshape(layer_1, (-1, 4, 4, 512))\n",
+    "        layer_1 = tf.layers.batch_normalization(layer_1, training=is_train)\n",
+    "        layer_1 = tf.maximum(alpha * layer_1, layer_1)\n",
+    "        # Layer 1 out: 4x4x512\n",
+    "        \n",
+    "        layer_2 = tf.layers.conv2d_transpose(layer_1, 128, 4, 1, padding='valid', kernel_initializer=tf.random_normal_initializer(stddev=stddev))\n",
+    "        layer_2 = tf.layers.batch_normalization(layer_2, training=is_train)\n",
+    "        layer_2 = tf.maximum(alpha * layer_2, layer_2)\n",
+    "        # Layer 2 out: 8x8x128\n",
+    "        \n",
+    "        layer_3 = tf.layers.conv2d_transpose(layer_2, 64, 5, 2, padding='same', kernel_initializer=tf.random_normal_initializer(stddev=stddev))\n",
+    "        layer_3 = tf.layers.batch_normalization(layer_3, training=is_train)\n",
+    "        layer_3 = tf.maximum(alpha * layer_3, layer_3)\n",
+    "        # Layer 3 out: 16x16x64\n",
+    "        \n",
+    "        layer_4 = tf.layers.conv2d_transpose(layer_3, 32, 5, 2, padding='same',kernel_initializer=tf.random_normal_initializer(stddev=stddev))\n",
+    "        layer_4 = tf.layers.batch_normalization(layer_4, training=is_train)\n",
+    "        layer_4 = tf.maximum(alpha * layer_4, layer_4)\n",
+    "        # Layer 4 out: 32x32x32\n",
+    "        \n",
+    "        logits = tf.layers.conv2d_transpose(layer_4, out_channel_dim, 3, 1, padding='same', kernel_initializer=tf.random_normal_initializer(stddev=stddev))\n",
+    "        output = tf.tanh(logits)\n",
+    "        \n",
+    "        return output\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -348,9 +396,16 @@
     "    :param out_channel_dim: The number of channels in the output image\n",
     "    :return: A tuple of (discriminator loss, generator loss)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
+    "    gen_model = generator(input_z, out_channel_dim)\n",
+    "    dis_model_real, dis_logits_real = discriminator(input_real)\n",
+    "    dis_model_fake, dis_logits_fake = discriminator(gen_model, reuse=True)\n",
     "    \n",
-    "    return None, None\n",
+    "    dis_loss_real = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits=dis_logits_real, labels=tf.ones_like(dis_logits_real) * 0.9))\n",
+    "    dis_loss_fake = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits=dis_logits_fake, labels=tf.zeros_like(dis_logits_fake)))\n",
+    "    dis_loss = dis_loss_real + dis_loss_fake\n",
+    "    gen_loss = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits=dis_logits_fake, labels=tf.ones_like(dis_logits_fake)))\n",
+    "    \n",
+    "    return dis_loss, gen_loss\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -384,9 +439,18 @@
     "    :param beta1: The exponential decay rate for the 1st moment in the optimizer\n",
     "    :return: A tuple of (discriminator training operation, generator training operation)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
+    "    train_vars = tf.trainable_variables()\n",
+    "    dis_vars = [var for var in train_vars if var.name.startswith('discriminator')]\n",
+    "    gen_vars = [var for var in train_vars if var.name.startswith('generator')]\n",
     "    \n",
-    "    return None, None\n",
+    "    update_ops = tf.get_collection(tf.GraphKeys.UPDATE_OPS)\n",
+    "    gen_updates = [op for op in update_ops if op.name.startswith('generator')]\n",
+    "    \n",
+    "    with tf.control_dependencies(gen_updates):\n",
+    "        dis_train_ops = tf.train.AdamOptimizer(learning_rate, beta1=beta1).minimize(d_loss, var_list=dis_vars)\n",
+    "        gen_train_ops = tf.train.AdamOptimizer(learning_rate, beta1=beta1).minimize(g_loss, var_list=gen_vars)\n",
+    "    \n",
+    "        return dis_train_ops, gen_train_ops\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -472,14 +536,48 @@
     "    :param data_shape: Shape of the data\n",
     "    :param data_image_mode: The image mode to use for images (\"RGB\" or \"L\")\n",
     "    \"\"\"\n",
-    "    # TODO: Build Model\n",
+    "    _, image_width, image_height, image_channels = data_shape\n",
+    "    \n",
+    "    input_real, input_z, in_learning_rate = model_inputs(image_width, image_height, image_channels, z_dim)\n",
+    "    dis_loss, gen_loss = model_loss(input_real, input_z, image_channels)\n",
+    "    dis_ops, gen_ops = model_opt(dis_loss, gen_loss, learning_rate, beta1)\n",
+    "    \n",
+    "    steps = 0\n",
+    "    \n",
+    "    print_every = 10\n",
+    "    show_every = 100\n",
+    "    \n",
+    "    saver = tf.train.Saver()\n",
     "    \n",
     "    \n",
     "    with tf.Session() as sess:\n",
     "        sess.run(tf.global_variables_initializer())\n",
     "        for epoch_i in range(epoch_count):\n",
     "            for batch_images in get_batches(batch_size):\n",
-    "                # TODO: Train Model\n",
+    "                steps += 1\n",
+    "                \n",
+    "                batch_images *= 2\n",
+    "                \n",
+    "                batch_z = np.random.uniform(-1, 1, size=(batch_size, z_dim))\n",
+    "                \n",
+    "                _ = sess.run(dis_ops, feed_dict={ input_real: batch_images, input_z: batch_z, in_learning_rate: learning_rate })\n",
+    "                _ = sess.run(gen_ops, feed_dict={ input_z: batch_z, in_learning_rate: learning_rate })\n",
+    "                \n",
+    "                if steps % print_every == 0:\n",
+    "                    dis_loss_train = dis_loss.eval({\n",
+    "                        input_z: batch_z,\n",
+    "                        input_real: batch_images\n",
+    "                    })\n",
+    "                    gen_loss_train = gen_loss.eval({\n",
+    "                        input_z: batch_z\n",
+    "                    })\n",
+    "                    \n",
+    "                    print(\"Epoch {}/{}...\".format(epoch_i+1, epoch_count),\n",
+    "                         \"Discriminator Loss: {:.4f}...\".format(dis_loss_train),\n",
+    "                         \"Generator Loss: {:.4f}\".format(gen_loss_train))\n",
+    "                    \n",
+    "                if steps % show_every == 0:\n",
+    "                    show_generator_output(sess, 25, input_z, image_channels, data_image_mode)\n",
     "                \n",
     "                "
    ]
@@ -501,10 +599,10 @@
    },
    "outputs": [],
    "source": [
-    "batch_size = None\n",
-    "z_dim = None\n",
-    "learning_rate = None\n",
-    "beta1 = None\n",
+    "batch_size = 64\n",
+    "z_dim = 128\n",
+    "learning_rate = 0.001\n",
+    "beta1 = 0.5\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -535,10 +633,10 @@
    },
    "outputs": [],
    "source": [
-    "batch_size = None\n",
-    "z_dim = None\n",
-    "learning_rate = None\n",
-    "beta1 = None\n",
+    "batch_size = 128\n",
+    "z_dim = 100\n",
+    "learning_rate = 0.0001\n",
+    "beta1 = 0.5\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -577,7 +675,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
